# agent-guard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml  release.yml
docs/: USER_MANUAL.md
docs/launch/: dev-to.md  hacker-news.md  linkedin.md  reddit-r-programming.md  twitter-thread.md
examples/: .agent-guard.yml  basic-workflow.yml
features/: agent-guard-feature-plan.md
src/agent_guard/: __init__.py  __main__.py  cli.py  config.py  models.py  scoring.py
src/agent_guard/analyzers/: __init__.py  base.py  dangerous_patterns.py  hallucinated_imports.py  infra_changes.py  missing_tests.py  registry.py  secrets.py
src/agent_guard/diff/: __init__.py  parser.py
src/agent_guard/github/: __init__.py  comment.py
src/agent_guard/report/: __init__.py  json.py  markdown.py
tests/: conftest.py  test_cli.py  test_dangerous_patterns.py  test_diff.py  test_hallucinated_imports.py  test_infra_changes.py  test_missing_tests.py  test_scoring.py  test_secrets.py
tests/fixtures/: _planted_findings.py
