[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag-scan"
version = "0.1.3"
description = "CI/CD safety and risk analysis for AI-assisted coding workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "agent-guard contributors" }]
keywords = ["ci", "security", "ai", "code-review", "github-action", "claude", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "unidiff>=0.7",
    "pathspec>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
agent-guard = "agent_guard.cli:main"

[project.urls]
Homepage = "https://github.com/tasnuvaleeya/agent-guard"
Issues = "https://github.com/tasnuvaleeya/agent-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_guard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/agent_guard/report/markdown.py" = ["RUF001"]  # severity emojis are intentional

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src/agent_guard"]

[[tool.mypy.overrides]]
module = ["unidiff", "unidiff.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
